--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wishbone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 <body>
 <header>
@@ -14,7 +21,7 @@
         <a class="logo1" href="#"><img
                 src="images/Combined-Shape.svg" alt="logo"> </a>
         <nav>
-            <ul >
+            <ul>
                 <li class="item1">
                     <a class="link1" href="#">Projects</a>
                 </li>
@@ -25,8 +32,8 @@
                     <a class="link3" href="#">News</a>
                 </li>
                 <li class="item4"
-                ">
-                <a class="link4" href="#">Team</a>
+                >
+                    <a class="link4" href="#">Team</a>
                 </li>
                 <li class="item5">
                     <a class="link5" href="#">Contact</a>
@@ -56,6 +63,62 @@
     </div>
 
 </section>
+
+<section class="second_banner">
+    <div class="banner_conteiner">
+        <div class="second_conteiner2">
+            <h4>Our process</h4>
+            <h2>How we do what we do.</h2>
+        </div>
+        <div class="carusel_list owl-carousel">
+            <div class="item_list">
+                <a href="#"><img alt="icon" src="images/Sketching-Icon.svg"></a>
+                <h4>Sketching</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut tristique libero. Nulla luctus
+                    sapien ac arcu tempor, vitae tempor leo iaculis.</p>
+            </div>
+            <div class="item_list2">
+                <a href="#"><img alt="icon" src="images/Finalizing-Icon.svg"></a>
+                <h4>Finalizing</h4>
+                <p>Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu
+                    tempor, vitae.</p>
+            </div>
+            <div class="item_list">
+                <a href="#"><img alt="icon" src="images/Building-Icon.svg"></a>
+                <h4>Building</h4>
+                <p>Nulla ut tristique libero. Lorem ipsum ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae
+                    lorem ipsum dolor leo iaculis.</p>
+            </div>
+            <div class="item_list">
+                <a href="#"><img alt="icon" src="images/Sketching-Icon.svg"></a>
+                <h4>Sketching</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut tristique libero. Nulla luctus
+                    sapien ac arcu tempor, vitae tempor leo iaculis.</p>
+            </div>
+            <div class="item_list2">
+                <a href="#"><img alt="icon" src="images/Finalizing-Icon.svg"></a>
+                <h4>Finalizing</h4>
+                <p>Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu
+                    tempor, vitae.</p>
+            </div>
+            <div class="item_list">
+                <a href="#"><img alt="icon" src="images/Building-Icon.svg"></a>
+                <h4>Building</h4>
+                <p>Nulla ut tristique libero. Lorem ipsum ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae
+                    lorem ipsum dolor leo iaculis.</p>
+            </div>
+            <div class="item_list2">
+                <a href="#"><img alt="icon" src="images/Finalizing-Icon.svg"></a>
+                <h4>Finalizing</h4>
+                <p>Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu
+                    tempor, vitae.</p>
+            </div>
+        </div>
+    </div>
+
+
+</section>
+
 <section class="section2">
     <div class="section2_generalconteiner">
         <div class="section2_conteiner1">
@@ -88,6 +151,15 @@
 
 
 </footer>
+<i class="fa-solid fa-eye"></i>
+<script src="https://kit.fontawesome.com/3ab547b2c3.js" crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/script.js"></script>
+
 
 </body>
 </html>
