--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <p class="footer_text">Powered by Webflow.<br> All rights reserved Wishbone+Partners, Inc.Licensing</p>
         </div>
         <ul class="list2">
-            <li class="item_logo1"><a href="#" "><img
+            <li class="item_logo1"><a href="#" ><img
                     src="images/Path.svg"></a></li>
             <li class="item_logo2"><a  href="#"><img
                     src="images/Shape.svg"></a></li>
