--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wishbone</title>
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -16,6 +19,15 @@
 
 </head>
 <body>
+
+<div id="dialog" title="Leave your number">
+    <form class="form_dialog">
+        <input class="dialog_input"  placeholder="Phone number">
+        <button class="dialog_button_reset"  type="reset">Cancel</button>
+        <button class="dialog_button_submit" type="submit">Send</button>
+    </form>
+</div>
+
 <header>
     <div class="conteiner">
         <a class="logo1" href="#"><img
@@ -40,7 +52,7 @@
                 </li>
                 <li class="item6">
                     <a class="link6"
-                       href="#">Get template</a>
+                       href="#" id="opener">Get template</a>
 
 
                 </li>
@@ -140,11 +152,11 @@
             <p class="footer_text">Powered by Webflow.<br> All rights reserved Wishbone+Partners, Inc.Licensing</p>
         </div>
         <ul class="list2">
-            <li class="item_logo1"><a href="#" ><img
+            <li class="item_logo1"><a href="#"><img
                     src="images/Path.svg"></a></li>
-            <li class="item_logo2"><a  href="#"><img
+            <li class="item_logo2"><a href="#"><img
                     src="images/Shape.svg"></a></li>
-            <li class="item_logo3"><a  href="#"><img
+            <li class="item_logo3"><a href="#"><img
                     src="images/Path%20(1).svg"></a></li>
         </ul>
     </div>
@@ -157,6 +169,7 @@
         src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/script.js"></script>
 
